//  Copyright (c) 2016, Google Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package tao;

// This is the entry used by the host to track the stored counter value.
message rollback_entry {
  required string hosted_program_name = 1;
  required string entry_label = 2;
  optional int64 counter = 3;
}

// Table of entries.
message rollback_counter_table {
  repeated rollback_entry entries = 1;
}

// This is the data structure sealed by the host.
message rollback_sealed_data {
  optional rollback_entry entry = 1;
  optional bytes protected_data = 2;
}

